--- a/coq-js/dune
+++ b/coq-js/dune
@@ -5,7 +5,7 @@
  (preprocess (staged_pps lwt_ppx js_of_ocaml-ppx ppx_import ppx_deriving_yojson))
  (flags :standard -w -39)
  (libraries js_of_ocaml-lwt yojson ppx_deriving_yojson.runtime coq-core.stm coq-core.toplevel
-            jslib coq-serapi.serlib coq-serapi.serapi_v8_14))
+            jslib coq-serapi.serlib coq-serapi.serapi_v8_14 tprinter))
 
 (executable
  (name jscoq_worker)
